@@ -142,6 +142,7 @@ client_handle_set_configuration(struct lldpd *cfg, enum hmsg_type *type,
 		    config->c_description?config->c_description:"(NULL)");
 		free(cfg->g_config.c_description);
 		cfg->g_config.c_description = xstrdup(config->c_description);
+		lldpd_update_localchassis(cfg);
 		levent_update_now(cfg);
 	}
 	if (CHANGED_STR(c_platform)) {
@@ -149,6 +150,7 @@ client_handle_set_configuration(struct lldpd *cfg, enum hmsg_type *type,
 		    config->c_platform?config->c_platform:"(NULL)");
 		free(cfg->g_config.c_platform);
 		cfg->g_config.c_platform = xstrdup(config->c_platform);
+		lldpd_update_localchassis(cfg);
 		levent_update_now(cfg);
 	}
 	if (CHANGED_STR(c_hostname)) {
@@ -156,6 +158,7 @@ client_handle_set_configuration(struct lldpd *cfg, enum hmsg_type *type,
 		    config->c_hostname?config->c_hostname:"(NULL)");
 		free(cfg->g_config.c_hostname);
 		cfg->g_config.c_hostname = xstrdup(config->c_hostname);
+		lldpd_update_localchassis(cfg);
 		levent_update_now(cfg);
 	}
 	if (CHANGED(c_set_ifdescr)) {
