@@ -1,3 +1,7 @@
+lldpd (1.0.0)
+  * Fix:
+    + Ensure chassis-related changes are propagated immediately.
+
 lldpd (0.9.9)
   * Changes:
     + lldpcli can now display local interfaces with LLDP data sent on
